# DeepSearch-MCP

./: .env  .gitignore  AGENTS.md  API_Docs.md  README.md  main.py  main.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: publish.yml
codex/: AGENTS.md  checkpoint.md
deepsearch_agents/: __init__.py  deepsearch.py  deepsearch.ts  deepsearch_web.py  deepsearch_web.ts
deepsearch_mcp/: __init__.py  client.py  client.ts
mcp/: deepsearch.py  deepsearch_web.py
scripts/: test-call.ts
source/: api.py  api.ts  logger.ts
tests/: agents.test.ts  client.test.ts  conftest.py  server.test.ts  test_agents.py  test_client.py  test_server.py  test_transport.py  transport.test.ts
